--- a/Wiwa-AppAssembly.csproj
+++ b/Wiwa-AppAssembly.csproj
@@ -68,6 +68,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BulletController.cs" />
+    <Compile Include="Assets\Scripts\CharacterController.cs" />
   </ItemGroup>
   <ItemGroup>
   </ItemGroup>
