--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,44
-Size=1920,943
+Size=1920,951
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,70 +9,70 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=0,687
-Size=1458,300
+Pos=0,695
+Size=1435,300
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Log]
-Pos=0,687
-Size=1458,300
+Pos=0,695
+Size=1435,300
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene]
 Pos=261,44
-Size=1197,641
+Size=1174,649
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,44
-Size=259,641
+Size=259,649
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Assets]
-Pos=0,687
-Size=1458,300
+Pos=0,695
+Size=1435,300
 Collapsed=0
 DockId=0x0000000A,2
 
 [Window][Inspector]
-Pos=1460,44
-Size=460,625
+Pos=1437,44
+Size=483,630
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Material Editor]
-Pos=1460,671
-Size=460,316
+Pos=1437,676
+Size=483,319
 Collapsed=0
 DockId=0x00000010,1
 
 [Window][Game]
 Pos=261,44
-Size=1197,641
+Size=1174,649
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Cameras]
-Pos=1460,44
-Size=460,625
+Pos=1437,44
+Size=483,630
 Collapsed=0
 DockId=0x0000000F,2
 
 [Window][Shaders]
-Pos=1460,671
-Size=460,316
+Pos=1437,676
+Size=483,319
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Audio]
-Pos=1460,671
-Size=460,316
+Pos=1437,480
+Size=483,507
 Collapsed=0
-DockId=0x00000010,2
+DockId=0x00000010,1
 
 [Window][FrameTime]
 Pos=60,60
@@ -223,8 +223,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Configuration]
-Pos=1460,44
-Size=460,625
+Pos=1437,44
+Size=483,630
 Collapsed=0
 DockId=0x0000000F,1
 
@@ -270,13 +270,13 @@ Column 1  Width=102
 Column 2  Width=245
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,943 Split=X
-  DockNode            ID=0x0000000B Parent=0x3BC79352 SizeRef=1458,951 Split=Y
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,951 Split=X
+  DockNode            ID=0x0000000B Parent=0x3BC79352 SizeRef=1435,951 Split=Y
     DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=1920,649 Split=X
       DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=259,951 Split=Y Selected=0x2FCD1A98
         DockNode      ID=0x00000011 Parent=0x0000000D SizeRef=485,266 Selected=0x2FCD1A98
         DockNode      ID=0x00000012 Parent=0x0000000D SizeRef=485,373 Selected=0x6EDB0647
-      DockNode        ID=0x0000000E Parent=0x00000009 SizeRef=1197,951 Split=X
+      DockNode        ID=0x0000000E Parent=0x00000009 SizeRef=1174,951 Split=X
         DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1447,633 Split=Y
           DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1280,698 Split=X
             DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=292,670 Selected=0x29EABFBD
@@ -285,8 +285,8 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,943 Spl
         DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=471,633 Split=Y Selected=0x31A92E12
           DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=437,407 Selected=0x31A92E12
           DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=437,248 Selected=0x28B292A2
-    DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=1920,300 Selected=0x52362300
-  DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=460,951 Split=Y Selected=0xB6025623
-    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0x2F10BA8A
-    DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=410,316 Selected=0xB7FF28F0
+    DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=1920,300 Selected=0x4D0E59DE
+  DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=483,951 Split=Y Selected=0xB6025623
+    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0xB6025623
+    DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=410,316 Selected=0x4F41356E
 
