Scene for v.slice 1

--- a/imgui.ini
+++ b/imgui.ini
@@ -69,10 +69,10 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Audio]
-Pos=1437,480
-Size=483,507
+Pos=1437,676
+Size=483,319
 Collapsed=0
-DockId=0x00000010,1
+DockId=0x00000010,2
 
 [Window][FrameTime]
 Pos=60,60
@@ -285,8 +285,8 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,951 Spl
         DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=471,633 Split=Y Selected=0x31A92E12
           DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=437,407 Selected=0x31A92E12
           DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=437,248 Selected=0x28B292A2
-    DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=1920,300 Selected=0x4D0E59DE
+    DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=1920,300 Selected=0x52362300
   DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=483,951 Split=Y Selected=0xB6025623
-    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0xB6025623
+    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0x2F10BA8A
     DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=410,316 Selected=0x4F41356E
 
