--- a/imgui.ini
+++ b/imgui.ini
@@ -30,7 +30,7 @@ DockId=0x00000006,0
 Pos=0,44
 Size=259,649
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000D,0
 
 [Window][Assets]
 Pos=0,695
@@ -234,10 +234,10 @@ Size=436,375
 Collapsed=0
 
 [Window][UI]
-Pos=0,312
-Size=425,373
+Pos=1437,44
+Size=483,630
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x0000000F,3
 
 [Window][WARNING]
 Pos=782,448
@@ -273,20 +273,18 @@ Column 2  Width=245
 DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,951 Split=X
   DockNode            ID=0x0000000B Parent=0x3BC79352 SizeRef=1435,951 Split=Y
     DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=1920,649 Split=X
-      DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=259,951 Split=Y Selected=0x2FCD1A98
-        DockNode      ID=0x00000011 Parent=0x0000000D SizeRef=485,266 Selected=0x2FCD1A98
-        DockNode      ID=0x00000012 Parent=0x0000000D SizeRef=485,373 Selected=0x6EDB0647
+      DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=259,951 Selected=0x2FCD1A98
       DockNode        ID=0x0000000E Parent=0x00000009 SizeRef=1174,951 Split=X
         DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1447,633 Split=Y
           DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1280,698 Split=X
             DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=292,670 Selected=0x29EABFBD
-            DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1153,670 CentralNode=1 Selected=0x3B98C811
+            DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1153,670 CentralNode=1 Selected=0x3BC7234D
           DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1280,254 Selected=0x26CE0345
         DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=471,633 Split=Y Selected=0x31A92E12
           DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=437,407 Selected=0x31A92E12
           DockNode    ID=0x00000002 Parent=0x00000008 SizeRef=437,248 Selected=0x28B292A2
     DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=1920,300 Selected=0x52362300
   DockNode            ID=0x0000000C Parent=0x3BC79352 SizeRef=483,951 Split=Y Selected=0xB6025623
-    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0x2F10BA8A
-    DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=410,316 Selected=0x4F41356E
+    DockNode          ID=0x0000000F Parent=0x0000000C SizeRef=410,625 Selected=0x6EDB0647
+    DockNode          ID=0x00000010 Parent=0x0000000C SizeRef=410,316 Selected=0xB7FF28F0
 
