--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace Demo]
 Pos=0,44
-Size=1920,951
+Size=1920,943
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,68 +9,68 @@ Size=400,400
 Collapsed=0
 
 [Window][Console]
-Pos=0,695
+Pos=0,687
 Size=1435,300
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Log]
-Pos=0,695
+Pos=0,687
 Size=1435,300
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Scene]
 Pos=261,44
-Size=1174,649
+Size=1174,641
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=0,44
-Size=259,649
+Size=259,641
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][Assets]
-Pos=0,695
+Pos=0,687
 Size=1435,300
 Collapsed=0
 DockId=0x0000000A,2
 
 [Window][Inspector]
 Pos=1437,44
-Size=483,630
+Size=483,625
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Material Editor]
-Pos=1437,676
-Size=483,319
+Pos=1437,671
+Size=483,316
 Collapsed=0
 DockId=0x00000010,1
 
 [Window][Game]
 Pos=261,44
-Size=1174,649
+Size=1174,641
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Cameras]
 Pos=1437,44
-Size=483,630
+Size=483,625
 Collapsed=0
 DockId=0x0000000F,2
 
 [Window][Shaders]
-Pos=1437,676
-Size=483,319
+Pos=1437,671
+Size=483,316
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][Audio]
-Pos=1437,676
-Size=483,319
+Pos=1437,671
+Size=483,316
 Collapsed=0
 DockId=0x00000010,2
 
@@ -224,7 +224,7 @@ DockId=0x00000002,0
 
 [Window][Configuration]
 Pos=1437,44
-Size=483,630
+Size=483,625
 Collapsed=0
 DockId=0x0000000F,1
 
@@ -270,7 +270,7 @@ Column 1  Width=102
 Column 2  Width=245
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,951 Split=X
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,943 Split=X
   DockNode            ID=0x0000000B Parent=0x3BC79352 SizeRef=1435,951 Split=Y
     DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=1920,649 Split=X
       DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=259,951 Split=Y Selected=0x2FCD1A98
@@ -280,7 +280,7 @@ DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,67 Size=1920,951 Spl
         DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=1447,633 Split=Y
           DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1280,698 Split=X
             DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=292,670 Selected=0x29EABFBD
-            DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1153,670 CentralNode=1 Selected=0x3B98C811
+            DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=1153,670 CentralNode=1 Selected=0x3BC7234D
           DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1280,254 Selected=0x26CE0345
         DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=471,633 Split=Y Selected=0x31A92E12
           DockNode    ID=0x00000001 Parent=0x00000008 SizeRef=437,407 Selected=0x31A92E12
